--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "prettier": "^2.8.1",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-gallery-carousel": "^0.3.0",
     "react-portal": "^4.2.2",
     "react-router-dom": "^6.6.1",
     "sass": "^1.57.1"
