--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.15.0",
     "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
