--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "csl-map-browser",
-  "private": true,
+  "name": "skylines-atlas",
+  "private": false,
   "version": "0.0.0",
   "homepage": "https://fancybaguette.github.io/skylines-atlas",
   "type": "module",
@@ -12,7 +12,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^9.15.0",
     "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
